use FaunaDB GraphQL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="js/DOMReady.js"></script>
-  <script src="js/GETRequest.js"></script>
+  <script src="js/POSTRequest.js"></script>
   <script src="js/script.js"></script>
 </head>
 <body>
