Add rubai querying

--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <html>
-<head>
-  <meta charset='UTF-8'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="рубаи мудрость стихи хайям поэзия случайный">
-  <meta name="description" content="Здесь можно получить случайный рубаи, полный мудрости, прямиком от самого Омара Хайяма">
-  <title>Случайный Рубаи Омара Хайяма</title>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/DOMReady.js"></script>
-  <script src="js/POSTRequest.js"></script>
-  <script src="js/script.js"></script>
-</head>
-<body>
-  <div id="header">
-    <div class='text' id='title'>
-      Случайный Рубаи Омара Хайяма
-    </div>
-  </div>
-
-  <div id="other">
-    <div id='rubai-wrapper'>
-      <div id='rubai' class='show-up'></div>
+  <head>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="рубаи мудрость стихи хайям поэзия случайный">
+    <meta name="description" content="Здесь можно получить случайный рубаи,
+      полный мудрости, прямиком от самого Омара Хайяма">
+    <title>Случайный Рубаи Омара Хайяма</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://unpkg.com/@ungap/url-search-params@0.2.2/min.js"></script>
+    <script src="js/DOMReady.js"></script>
+    <script src="js/POSTRequest.js"></script>
+    <script src="js/script.js"></script>
+  </head>
+  <body>
+    <div id="header">
+      <div class='text' id='title'>
+        Случайный Рубаи Омара Хайяма
+      </div>
     </div>
 
-    <div class='text fade-in' id='i-need-another-one'>
-      <a href="#">Мне нужен ещё один случайный Рубаи</a>
+    <div id="other">
+      <div id='rubai-wrapper'>
+        <div id='rubai' class='show-up'></div>
+      </div>
+
+      <div class='text fade-in' id='i-need-another-one'>
+        <a href="#">Мне нужен ещё один случайный Рубаи</a>
+      </div>
+
+      <div id="hayam-itself">
+      </div>
     </div>
-  
-    <div id="hayam-itself">
-    </div>
-  </div>
-</body>
+  </body>
 </html>
